Clears class cart after signup

--- a/templates/cart.html
+++ b/templates/cart.html
@@ -25,7 +25,7 @@
   </form> 
 
   <form id='initiate_signup' method='get' action='/signup' > 
-      <input type='submit' value='Sign-up for classes' />
+      <input type='submit' value='Go to sign-up form' />
   </form>
 
 <br>
